justify style.css for overlap bug in index.html

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -49,6 +49,7 @@ body{
 }
 .left-grid{
 	float:left;
+	width:43%;
 }
 .avaalabled a{
 	display:block;
